# keyfinder

./: .env.example  .gitignore  LICENSE  README.md
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: audio_processing.py  model.py  model_loader.py  validator.py
backend/src/: main.py
backend/src/ml/: model.py
backend/src/utils/: audio_processing.py  gcs_storage.py  model_loader.py  rate_limiter.py  validator.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: index.css  index.jsx
frontend/src/app/: App.jsx  AudioUpload.jsx
frontend/src/components/: AudioUpload.jsx  Footer.jsx  Header.jsx  StepByStep.jsx
frontend/src/routes/: Home.jsx  HowItWorks.jsx
infrastructure/: .terraform.lock.hcl  main.tf  variables.tf
infrastructure/modules/run/: main.tf  variables.tf
infrastructure/modules/storage/: main.tf  variables.tf
scripts/: build.ps1  elevate.ps1
